Fixed menu dots - changed them back to Fjalla One to make more visible.

--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,7 @@ header .navigation .tab.active:hover {
     margin-top: 15px;
     color: #e00000;
     font-size: .75em;
+    font-family: 'Fjalla One', sans-serif; /* NEWLY EDITED */
 }
 
 .menu-container .menu-module p span:first-child {
